[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://TestScenes/TestMob.gd" type="Script" id=2]
[ext_resource path="res://Utlilty Scenes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Utlilty Scenes/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Utlilty Scenes/ShadowBrush.tscn" type="PackedScene" id=5]
[ext_resource path="res://Utlilty Scenes/Hitbox.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 13 )

[sub_resource type="CircleShape2D" id=2]
radius = 15.0333

[sub_resource type="CircleShape2D" id=3]
radius = 283.452

[node name="testMob" type="KinematicBody2D"]
script = ExtResource( 2 )
acceleration = 50
dash_speed = 100

[node name="ShadowBrush" parent="." instance=ExtResource( 5 )]
modulate = Color( 0.133333, 0.133333, 0.133333, 0.54902 )
tile_data = PoolIntArray( 458743, 536870912, 0, 458744, 536870912, 0, 458745, 536870912, 0, 458746, 536870912, 0, 458747, 536870912, 0, 458748, 536870912, 0, 458749, 536870912, 0, 458750, 536870912, 0, 458751, 536870912, 0, 393216, 536870912, 0, 393217, 536870912, 0, 393218, 536870912, 0, 393219, 536870912, 0, 393220, 536870912, 0, 393221, 536870912, 0, 393222, 536870912, 0, 393223, 536870912, 0, 393224, 536870912, 0, 524274, 536870912, 0, 524275, 536870912, 0, 524276, 536870912, 0, 524277, 536870912, 0, 524278, 536870912, 0, 524279, 536870912, 0, 524280, 536870912, 0, 524281, 536870912, 0, 524282, 536870912, 0, 524283, 536870912, 0, 524284, 536870912, 0, 524285, 536870912, 0, 524286, 536870912, 0, 524287, 536870912, 0, 458752, 536870912, 0, 458753, 536870912, 0, 458754, 536870912, 0, 458755, 536870912, 0, 458756, 536870912, 0, 458757, 536870912, 0, 458758, 536870912, 0, 458759, 536870912, 0, 458760, 536870912, 0, 458761, 536870912, 0, 458762, 536870912, 0, 589808, 536870912, 0, 589809, 536870912, 0, 589810, 536870912, 0, 589811, 536870912, 0, 589812, 536870912, 0, 589813, 536870912, 0, 589814, 536870912, 0, 589815, 536870912, 0, 589816, 536870912, 0, 589817, 536870912, 0, 589818, 536870912, 0, 589819, 536870912, 0, 589820, 536870912, 0, 589821, 536870912, 0, 589822, 536870912, 0, 589823, 536870912, 0, 524288, 536870912, 0, 524289, 536870912, 0, 524290, 536870912, 0, 524291, 536870912, 0, 524292, 536870912, 0, 524293, 536870912, 0, 524294, 536870912, 0, 524295, 536870912, 0, 524296, 536870912, 0, 524297, 536870912, 0, 524298, 536870912, 0, 524299, 536870912, 0, 524300, 536870912, 0, 655344, 536870912, 0, 655345, 536870912, 0, 655346, 536870912, 0, 655347, 536870912, 0, 655348, 536870912, 0, 655349, 536870912, 0, 655350, 536870912, 0, 655351, 536870912, 0, 655352, 536870912, 0, 655353, 536870912, 0, 655354, 536870912, 0, 655355, 536870912, 0, 655356, 536870912, 0, 655357, 536870912, 0, 655358, 536870912, 0, 655359, 536870912, 0, 589824, 536870912, 0, 589825, 536870912, 0, 589826, 536870912, 0, 589827, 536870912, 0, 589828, 536870912, 0, 589829, 536870912, 0, 589830, 536870912, 0, 589831, 536870912, 0, 589832, 536870912, 0, 589833, 536870912, 0, 589834, 536870912, 0, 589835, 536870912, 0, 589836, 536870912, 0, 589837, 536870912, 0, 720880, 536870912, 0, 720881, 536870912, 0, 720882, 536870912, 0, 720883, 536870912, 0, 720884, 536870912, 0, 720885, 536870912, 0, 720886, 536870912, 0, 720887, 536870912, 0, 720888, 536870912, 0, 720889, 536870912, 0, 720890, 536870912, 0, 720891, 536870912, 0, 720892, 536870912, 0, 720893, 536870912, 0, 720894, 536870912, 0, 720895, 536870912, 0, 655360, 536870912, 0, 655361, 536870912, 0, 655362, 536870912, 0, 655363, 536870912, 0, 655364, 536870912, 0, 655365, 536870912, 0, 655366, 536870912, 0, 655367, 536870912, 0, 655368, 536870912, 0, 655369, 536870912, 0, 655370, 536870912, 0, 655371, 536870912, 0, 655372, 536870912, 0, 655373, 536870912, 0, 655374, 536870912, 0, 786415, 536870912, 0, 786416, 536870912, 0, 786417, 536870912, 0, 786418, 536870912, 0, 786419, 536870912, 0, 786420, 536870912, 0, 786421, 536870912, 0, 786422, 536870912, 0, 786423, 536870912, 0, 786424, 536870912, 0, 786425, 536870912, 0, 786426, 536870912, 0, 786427, 536870912, 0, 786428, 536870912, 0, 786429, 536870912, 0, 786430, 536870912, 0, 786431, 536870912, 0, 720896, 536870912, 0, 720897, 536870912, 0, 720898, 536870912, 0, 720899, 536870912, 0, 720900, 536870912, 0, 720901, 536870912, 0, 720902, 536870912, 0, 720903, 536870912, 0, 720904, 536870912, 0, 720905, 536870912, 0, 720906, 536870912, 0, 720907, 536870912, 0, 720908, 536870912, 0, 720909, 536870912, 0, 720910, 536870912, 0, 851951, 536870912, 0, 851952, 536870912, 0, 851953, 536870912, 0, 851954, 536870912, 0, 851955, 536870912, 0, 851956, 536870912, 0, 851957, 536870912, 0, 851958, 536870912, 0, 851959, 536870912, 0, 851960, 536870912, 0, 851961, 536870912, 0, 851962, 536870912, 0, 851963, 536870912, 0, 851964, 536870912, 0, 851965, 536870912, 0, 851966, 536870912, 0, 851967, 536870912, 0, 786432, 536870912, 0, 786433, 536870912, 0, 786434, 536870912, 0, 786435, 536870912, 0, 786436, 536870912, 0, 786437, 536870912, 0, 786438, 536870912, 0, 786439, 536870912, 0, 786440, 536870912, 0, 786441, 536870912, 0, 786442, 536870912, 0, 786443, 536870912, 0, 786444, 536870912, 0, 786445, 536870912, 0, 786446, 536870912, 0, 917487, 536870912, 0, 917488, 536870912, 0, 917489, 536870912, 0, 917490, 536870912, 0, 917491, 536870912, 0, 917492, 536870912, 0, 917493, 536870912, 0, 917494, 536870912, 0, 917495, 536870912, 0, 917496, 536870912, 0, 917497, 536870912, 0, 917498, 536870912, 0, 917499, 536870912, 0, 917500, 536870912, 0, 917501, 536870912, 0, 917502, 536870912, 0, 917503, 536870912, 0, 851968, 536870912, 0, 851969, 536870912, 0, 851970, 536870912, 0, 851971, 536870912, 0, 851972, 536870912, 0, 851973, 536870912, 0, 851974, 536870912, 0, 851975, 536870912, 0, 851976, 536870912, 0, 851977, 536870912, 0, 851978, 536870912, 0, 851979, 536870912, 0, 851980, 536870912, 0, 851981, 536870912, 0, 851982, 536870912, 0, 983024, 536870912, 0, 983025, 536870912, 0, 983026, 536870912, 0, 983027, 536870912, 0, 983028, 536870912, 0, 983029, 536870912, 0, 983030, 536870912, 0, 983031, 536870912, 0, 983032, 536870912, 0, 983033, 536870912, 0, 983034, 536870912, 0, 983035, 536870912, 0, 983036, 536870912, 0, 983037, 536870912, 0, 983038, 536870912, 0, 983039, 536870912, 0, 917504, 536870912, 0, 917505, 536870912, 0, 917506, 536870912, 0, 917507, 536870912, 0, 917508, 536870912, 0, 917509, 536870912, 0, 917510, 536870912, 0, 917511, 536870912, 0, 917512, 536870912, 0, 917513, 536870912, 0, 917514, 536870912, 0, 917515, 536870912, 0, 917516, 536870912, 0, 917517, 536870912, 0, 917518, 536870912, 0, 1048561, 536870912, 0, 1048562, 536870912, 0, 1048563, 536870912, 0, 1048564, 536870912, 0, 1048565, 536870912, 0, 1048566, 536870912, 0, 1048567, 536870912, 0, 1048568, 536870912, 0, 1048569, 536870912, 0, 1048570, 536870912, 0, 1048571, 536870912, 0, 1048572, 536870912, 0, 1048573, 536870912, 0, 1048574, 536870912, 0, 1048575, 536870912, 0, 983040, 536870912, 0, 983041, 536870912, 0, 983042, 536870912, 0, 983043, 536870912, 0, 983044, 536870912, 0, 983045, 536870912, 0, 983046, 536870912, 0, 983047, 536870912, 0, 983048, 536870912, 0, 983049, 536870912, 0, 983050, 536870912, 0, 983051, 536870912, 0, 983052, 536870912, 0, 983053, 536870912, 0, 983054, 536870912, 0, 1114098, 536870912, 0, 1114099, 536870912, 0, 1114100, 536870912, 0, 1114101, 536870912, 0, 1114102, 536870912, 0, 1114103, 536870912, 0, 1114104, 536870912, 0, 1114105, 536870912, 0, 1114106, 536870912, 0, 1114107, 536870912, 0, 1114108, 536870912, 0, 1114109, 536870912, 0, 1114110, 536870912, 0, 1114111, 536870912, 0, 1048576, 536870912, 0, 1048577, 536870912, 0, 1048578, 536870912, 0, 1048579, 536870912, 0, 1048580, 536870912, 0, 1048581, 536870912, 0, 1048582, 536870912, 0, 1048583, 536870912, 0, 1048584, 536870912, 0, 1048585, 536870912, 0, 1048586, 536870912, 0, 1048587, 536870912, 0, 1048588, 536870912, 0, 1048589, 536870912, 0, 1179636, 536870912, 0, 1179637, 536870912, 0, 1179638, 536870912, 0, 1179639, 536870912, 0, 1179640, 536870912, 0, 1179641, 536870912, 0, 1179642, 536870912, 0, 1179643, 536870912, 0, 1179644, 536870912, 0, 1179645, 536870912, 0, 1179646, 536870912, 0, 1179647, 536870912, 0, 1114112, 536870912, 0, 1114113, 536870912, 0, 1114114, 536870912, 0, 1114115, 536870912, 0, 1114116, 536870912, 0, 1114117, 536870912, 0, 1114118, 536870912, 0, 1114119, 536870912, 0, 1114120, 536870912, 0, 1114121, 536870912, 0, 1114122, 536870912, 0, 1245174, 536870912, 0, 1245175, 536870912, 0, 1245176, 536870912, 0, 1245177, 536870912, 0, 1245178, 536870912, 0, 1245179, 536870912, 0, 1245180, 536870912, 0, 1245181, 536870912, 0, 1245182, 536870912, 0, 1245183, 536870912, 0, 1179648, 536870912, 0, 1179649, 536870912, 0, 1179650, 536870912, 0, 1179651, 536870912, 0, 1179652, 536870912, 0, 1179653, 536870912, 0, 1179654, 536870912, 0, 1179655, 536870912, 0 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.453125, 0.453125 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 2 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -23.0
margin_top = -31.0
margin_right = 17.0
margin_bottom = -12.0

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
